[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/House.gd" type="Script" id=1]
[ext_resource path="res://scenes/HouseTileset.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/NPCTileset.tres" type="TileSet" id=3]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/Dialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/lament_of_orpheus.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/music_notes_1.png" type="Texture" id=7]
[ext_resource path="res://assets/music_notes_2.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 1.5
} ]

[node name="House" type="Node2D"]
script = ExtResource( 1 )

[node name="HouseTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 786448, 1, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 1, 0, 851984, 1, 0, 851985, 24, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 24, 0, 851992, 1, 0, 917504, 13, 0, 917511, 13, 0, 917518, 13, 0, 917520, 1, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 16, 0, 917528, 1, 0, 917529, 26, 0, 983040, 1, 0, 983041, 1, 0, 983042, 17, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 17, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 17, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 1, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 983070, 2, 0, 983071, 2, 0, 983072, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048581, 5, 0, 1048582, 5, 0, 1048583, 5, 0, 1048584, 7, 0, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 10, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 1, 0, 1048601, 5, 0, 1048602, 5, 0, 1048603, 5, 0, 1048604, 5, 0, 1048605, 5, 0, 1048606, 25, 0, 1048607, 5, 0, 1048608, 1, 0, 1114112, 1, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 5, 0, 1114121, 5, 0, 1114122, 536870917, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 1, 0, 1114137, 5, 0, 1114138, 5, 0, 1114139, 5, 0, 1114140, 5, 0, 1114141, 5, 0, 1114142, 5, 0, 1114143, 5, 0, 1114144, 1, 0, 1179648, 1, 0, 1179649, 5, 0, 1179650, 5, 0, 1179651, 5, 0, 1179652, 0, 0, 1179653, 5, 0, 1179654, 5, 0, 1179655, 5, 0, 1179656, 5, 0, 1179657, 5, 0, 1179658, 5, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 536870917, 0, 1179668, 5, 0, 1179669, 5, 0, 1179670, 5, 0, 1179671, 5, 0, 1179672, 4, 0, 1179673, 5, 0, 1179674, 5, 0, 1179675, 5, 0, 1179676, 5, 0, 1179677, 5, 0, 1179678, 5, 0, 1179679, 5, 0, 1179680, 6, 0, 1245184, 1, 0, 1245185, 5, 0, 1245186, 5, 0, 1245187, 5, 0, 1245188, 5, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 5, 0, 1245192, 5, 0, 1245193, 5, 0, 1245194, 536870917, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 1, 0, 1245209, 5, 0, 1245210, 5, 0, 1245211, 5, 0, 1245212, 5, 0, 1245213, 5, 0, 1245214, 5, 0, 1245215, 5, 0, 1245216, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 5, 0, 1310723, 5, 0, 1310724, 5, 0, 1310725, 5, 0, 1310726, 5, 0, 1310727, 5, 0, 1310728, 7, 0, 1310729, 5, 0, 1310730, 5, 0, 1310731, 5, 0, 1310732, 10, 0, 1310733, 5, 0, 1310734, 5, 0, 1310735, 7, 0, 1310736, 5, 0, 1310737, 5, 0, 1310738, 5, 0, 1310739, 5, 0, 1310740, 5, 0, 1310741, 5, 0, 1310742, 5, 0, 1310743, 5, 0, 1310744, 1, 0, 1310745, 5, 0, 1310746, 5, 0, 1310747, 5, 0, 1310748, 5, 0, 1310749, 5, 0, 1310750, 5, 0, 1310751, 5, 0, 1310752, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 5, 0, 1376278, 5, 0, 1376279, 5, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 17, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 17, 0, 1376287, 1, 0, 1376288, 1, 0, 1441812, 1, 0, 1441813, 5, 0, 1441814, 5, 0, 1441815, 5, 0, 1441816, 1, 0, 1441817, 3, 0, 1441818, 3, 0, 1441819, 23, 0, 1441820, 5, 0, 1441821, 5, 0, 1441822, 21, 0, 1441823, 536870933, 0, 1441824, 1, 0, 1507337, 1, 0, 1507338, 1, 0, 1507339, 1, 0, 1507340, 1, 0, 1507341, 17, 0, 1507342, 1, 0, 1507343, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 17, 0, 1507347, 1, 0, 1507348, 1, 0, 1507349, 5, 0, 1507350, 5, 0, 1507351, 5, 0, 1507352, 1, 0, 1507353, 5, 0, 1507354, 5, 0, 1507355, 5, 0, 1507356, 5, 0, 1507357, 5, 0, 1507358, 22, 0, 1507359, 536870934, 0, 1507360, 1, 0, 1572873, 1, 0, 1572874, 7, 0, 1572875, 14, 0, 1572876, 5, 0, 1572877, 5, 0, 1572878, 14, 0, 1572879, 5, 0, 1572880, 5, 0, 1572881, 10, 0, 1572882, 5, 0, 1572883, 5, 0, 1572884, 5, 0, 1572885, 5, 0, 1572886, 5, 0, 1572887, 5, 0, 1572888, 4, 0, 1572889, 5, 0, 1572890, 5, 0, 1572891, 5, 0, 1572892, 5, 0, 1572893, 5, 0, 1572894, 5, 0, 1572895, 5, 0, 1572896, 1, 0, 1638409, 1, 0, 1638410, 5, 0, 1638411, 5, 0, 1638412, 16, 0, 1638413, 5, 0, 1638414, 5, 0, 1638415, 5, 0, 1638416, 16, 0, 1638417, 5, 0, 1638418, 5, 0, 1638419, 5, 0, 1638420, 5, 0, 1638421, 5, 0, 1638422, 5, 0, 1638423, 5, 0, 1638424, 1, 0, 1638425, 5, 0, 1638426, 5, 0, 1638427, 5, 0, 1638428, 5, 0, 1638429, 5, 0, 1638430, 5, 0, 1638431, 3, 0, 1638432, 1, 0, 1703945, 1, 0, 1703946, 5, 0, 1703947, 5, 0, 1703948, 5, 0, 1703949, 5, 0, 1703950, 5, 0, 1703951, 5, 0, 1703952, 5, 0, 1703953, 5, 0, 1703954, 5, 0, 1703955, 5, 0, 1703956, 5, 0, 1703957, 5, 0, 1703958, 5, 0, 1703959, 5, 0, 1703960, 1, 0, 1703961, 19, 0, 1703962, 536870931, 0, 1703963, 14, 0, 1703964, 5, 0, 1703965, 5, 0, 1703966, 5, 0, 1703967, 7, 0, 1703968, 1, 0, 1769481, 1, 0, 1769482, 5, 0, 1769483, 5, 0, 1769484, 5, 0, 1769485, 5, 0, 1769486, 5, 0, 1769487, 5, 0, 1769488, 5, 0, 1769489, 5, 0, 1769490, 5, 0, 1769491, 5, 0, 1769492, 5, 0, 1769493, 5, 0, 1769494, 5, 0, 1769495, 5, 0, 1769496, 1, 0, 1769497, 1, 0, 1769498, 1, 0, 1769499, 1, 0, 1769500, 1, 0, 1769501, 1, 0, 1769502, 1, 0, 1769503, 1, 0, 1769504, 1, 0, 1835017, 1, 0, 1835018, 5, 0, 1835019, 5, 0, 1835020, 16, 0, 1835021, 5, 0, 1835022, 5, 0, 1835023, 5, 0, 1835024, 16, 0, 1835025, 5, 0, 1835026, 5, 0, 1835027, 5, 0, 1835028, 5, 0, 1835029, 5, 0, 1835030, 5, 0, 1835031, 5, 0, 1835032, 1, 0, 1835038, 5, 0, 1900553, 1, 0, 1900554, 24, 0, 1900555, 14, 0, 1900556, 5, 0, 1900557, 5, 0, 1900558, 14, 0, 1900559, 5, 0, 1900560, 5, 0, 1900561, 5, 0, 1900562, 14, 0, 1900563, 5, 0, 1900564, 5, 0, 1900565, 14, 0, 1900566, 5, 0, 1900567, 24, 0, 1900568, 1, 0, 1966089, 1, 0, 1966090, 1, 0, 1966091, 1, 0, 1966092, 1, 0, 1966093, 1, 0, 1966094, 1, 0, 1966095, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966098, 1, 0, 1966099, 1, 0, 1966100, 1, 0, 1966101, 1, 0, 1966102, 1, 0, 1966103, 1, 0, 1966104, 1, 0 )

[node name="PassableTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 1048578, 15, 8, 1048579, 15, 10, 1048580, 15, 10, 1048581, 15, 10, 1048582, 15, 10, 1048583, 15, 11, 1114113, 15, 8, 1114114, 15, 65541, 1114115, 15, 131081, 1114116, 15, 131081, 1114117, 15, 131081, 1114118, 15, 131081, 1114119, 15, 131083, 1179649, 15, 65544, 1179650, 15, 131081, 1179651, 15, 131081, 1179652, 15, 131081, 1179653, 15, 131081, 1179654, 15, 131081, 1179655, 15, 131083, 1179658, 8, 0, 1179662, 536870921, 0, 1179668, 9, 0, 1245185, 15, 196616, 1245186, 15, 131077, 1245187, 15, 131081, 1245188, 15, 131081, 1245189, 15, 131081, 1245190, 15, 131081, 1245191, 15, 131083, 1245202, 8, 0, 1310722, 15, 196616, 1310723, 15, 196617, 1310724, 15, 196617, 1310725, 15, 196617, 1310726, 15, 196617, 1310727, 15, 196619, 1703947, 536870921, 0, 1703959, 9, 0, 1769494, 8, 0, 1835025, 536870920, 0 )

[node name="NpcMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 917521, 3, 0, 917523, 2, 0, 983062, 6, 0, 1048586, 1, 0, 1048591, 0, 0, 1048602, 5, 0, 1310743, 7, 0, 1441813, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 64, 288 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Dialog" parent="UI" instance=ExtResource( 5 )]
visible = false
margin_left = 128.0
margin_top = 464.0
margin_right = 928.0
margin_bottom = 560.0

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music"

[node name="music_sprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 352, 224 )
frames = SubResource( 1 )
frame = 1
playing = true
centered = false
